# jenknums

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt
jenknums/: cli.py  client.py  collector.py  models.py  output.py  scanner.py  utils.py  vulnerabilities.py
jenknums/data/: checks.yml
scripts/: build_vuln_db.py
