[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jenknums"
version = "0.1.0"
description = "Comprehensive, read-only Jenkins enumeration and vulnerability correlation tool"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "pajarori" }]
keywords = ["jenkins", "security", "enumeration", "scanner", "cve"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "beautifulsoup4>=4.12",
    "defusedxml>=0.7",
    "httpx>=0.24",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.scripts]
jenknums = "jenknums.cli:main"

[project.urls]
Homepage = "https://github.com/pajarori/jenknums"
Repository = "https://github.com/pajarori/jenknums"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
jenknums = ["data/*.yml", "data/*.json", "data/*.json.gz"]
